--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@
 # pip install -r requirements.txt
 # =====================================================================================
 
+# --- Core para Machine Learning e Execução ---
 tensorflow==2.15.0
 keras-tuner==1.4.7
 numpy==1.26.4
+scikit-learn==1.4.2
+scikit-image==0.22.0
+
+# --- Análise e Visualização de Dados ---
 pandas==2.2.2
 matplotlib==3.8.4
 seaborn==0.13.2
-scikit-learn==1.4.2
-scikit-image==0.22.0
